// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppTracker Component should add the high school to the high school state 1`] = `
<div>
  <div
    className="filters"
  >
    <h2>
      App Tracker for 
      Stony Brook University
    </h2>
    <div
      className="row"
    >
      <label
        htmlFor="minCollegeClass"
      >
        Min. College Class
      </label>
      <input
        min="0"
        name="minCollegeClass"
        onChange={[Function]}
        type="number"
      />
    </div>
    <div
      className="row"
    >
      <label
        htmlFor="maxCollegeClass"
      >
        Max. College Class
      </label>
      <input
        id=""
        min="0"
        name="maxCollegeClass"
        onChange={[Function]}
        type="number"
      />
    </div>
    <div
      className="row"
    >
      <label
        htmlFor="currentHighSchool"
      >
        High Schools
      </label>
      <input
        className="current-hs"
        id=""
        name="currentHighSchool"
        onChange={[Function]}
        type="text"
        value="Ward Melville Senior High School"
      />
      <button
        className="btn-add-hs"
        disabled={false}
        onClick={[Function]}
        type="submit"
      >
        Add High School
      </button>
    </div>
    <div
      className="high-school-list"
    >
      <div
        className="high-school-unit"
        key="Ward Melville Senior High School"
      >
        <h5
          className="high-school-name"
        >
          Ward Melville Senior High School
        </h5>
        <button
          onClick={[Function]}
        >
          Remove High School
        </button>
      </div>
    </div>
    <div
      className="row"
    >
      <label
        htmlFor="appStatuses"
      >
        Application Statuses:
      </label>
      <input
        id=""
        name="pending"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="pending"
      >
        Pending
      </label>
      <input
        id=""
        name="accepted"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="accepted"
      >
        Accepted
      </label>
      <input
        id=""
        name="denied"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="denied"
      >
        Denied
      </label>
      <input
        id=""
        name="deferred"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="deferred"
      >
        Deferred
      </label>
      <input
        id=""
        name="wait-listed"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="wait-listed"
      >
        Wait-listed
      </label>
      <input
        id=""
        name="withdrawn"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="withdrawn"
      >
        Withdrawn
      </label>
    </div>
    <button
      className="btn-filter"
      onClick={[Function]}
    >
      Apply Filters
    </button>
    <label
      htmlFor="scatterplot"
    >
      Scatterplot: 
    </label>
    <input
      checked={false}
      id=""
      name="scatterplot"
      onChange={[Function]}
      type="checkbox"
    />
  </div>
  <div
    className="student-list"
  />
</div>
`;

exports[`AppTracker Component should have initial states 1`] = `
<div>
  <div
    className="filters"
  >
    <h2>
      App Tracker for 
      Stony Brook University
    </h2>
    <div
      className="row"
    >
      <label
        htmlFor="minCollegeClass"
      >
        Min. College Class
      </label>
      <input
        min="0"
        name="minCollegeClass"
        onChange={[Function]}
        type="number"
      />
    </div>
    <div
      className="row"
    >
      <label
        htmlFor="maxCollegeClass"
      >
        Max. College Class
      </label>
      <input
        id=""
        min="0"
        name="maxCollegeClass"
        onChange={[Function]}
        type="number"
      />
    </div>
    <div
      className="row"
    >
      <label
        htmlFor="currentHighSchool"
      >
        High Schools
      </label>
      <input
        className="current-hs"
        id=""
        name="currentHighSchool"
        onChange={[Function]}
        type="text"
        value=""
      />
      <button
        className="btn-add-hs"
        disabled={true}
        onClick={[Function]}
        type="submit"
      >
        Add High School
      </button>
    </div>
    <div
      className="high-school-list"
    />
    <div
      className="row"
    >
      <label
        htmlFor="appStatuses"
      >
        Application Statuses:
      </label>
      <input
        id=""
        name="pending"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="pending"
      >
        Pending
      </label>
      <input
        id=""
        name="accepted"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="accepted"
      >
        Accepted
      </label>
      <input
        id=""
        name="denied"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="denied"
      >
        Denied
      </label>
      <input
        id=""
        name="deferred"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="deferred"
      >
        Deferred
      </label>
      <input
        id=""
        name="wait-listed"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="wait-listed"
      >
        Wait-listed
      </label>
      <input
        id=""
        name="withdrawn"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="withdrawn"
      >
        Withdrawn
      </label>
    </div>
    <button
      className="btn-filter"
      onClick={[Function]}
    >
      Apply Filters
    </button>
    <label
      htmlFor="scatterplot"
    >
      Scatterplot: 
    </label>
    <input
      checked={false}
      id=""
      name="scatterplot"
      onChange={[Function]}
      type="checkbox"
    />
  </div>
  <div
    className="student-list"
  />
</div>
`;
